unpackaged/main/default/objects/pse__Create_Billing_Documents_Batch__c/pse__Create_Billing_Documents_Batch__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__CreateBillingDocumentsBatchHelp</customHelpPage>
    <description>Stores the status and details of Create Billing Documents Batch Apex jobs.</description>
    <label>Create Billing Documents Batch</label>
    <nameField>
        <displayFormat>CBDB-{000000}</displayFormat>
        <label>Create Billing Documents Batch ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Create Billing Documents Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>