unpackaged/main/default/objects/pse__Create_Billing_Documents_Batch__c/fields/pse__Batch_Process__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the batch process record. The batch process record is deleted automatically if the process completes successfully.</description>
    <inlineHelpText>Lookup to the batch process record. The batch process record is deleted automatically if the process completes successfully.</inlineHelpText>
    <label>Batch Process</label>
    <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
    <relationshipLabel>Create Billing Documents Batches</relationshipLabel>
    <relationshipName>Create_Billing_Documents_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>