unpackaged/main/default/objects/pse__Create_Billing_Documents_Batch__c/fields/pse__Total_Number_Of_Logs__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Number_Of_Logs__c</fullName>
    <description>The total number of logs.</description>
    <inlineHelpText>The total number of logs.</inlineHelpText>
    <label>Total Number of Logs</label>
    <summaryForeignKey>pse__Create_Billing_Documents_Batch_Log__c.pse__Create_Billing_Documents_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>